// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls updateTree.js adds one source 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js adds two sources 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\"
          }
        },
        {
          \\"name\\": \\"source2.js\\",
          \\"path\\": \\"davidwalsh.name/source2.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/40\\",
            \\"url\\": \\"https://davidwalsh.name/source2.js\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js shows all the sources 1`] = `
"{
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\"
          }
        },
        {
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\"
          }
        }
      ]
    }
  ]
}"
`;
